# freightclub

./: -d  .clauderules  .dockerignore  .env-cors  .env.cloudrun  .env.cloudrun.yaml  .env.example  .env.prod.example  .env.test  .gitignore  .mcp.json  ACTIVE_UI_MIGRATION.md  AGILE_DASHBOARD_COMPLETE.md  API.md  ARCHITECTURE.md  BUNDLE_ANALYSIS_GOLDEN_PATH.md  BUNDLE_ANALYSIS_LOGIN_ROUTE.md  CARRIER_DESIGN_REFERENCE.md  CHANGELOG.md  CLAUDE.local.md  CLAUDE.md  CONFIGURATION_COMPLIANCE_REVIEW.md  CONTRIBUTING_GOVERNANCE.md  CRITICAL_ISSUES_STATUS.md  DEBUG_REGISTRATION.md  DEPENDENCY_FIX_SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  E2E_TESTING_SETUP_SUMMARY.md  EXECUTIVE-SUMMARY.md  EXECUTIVE_SUMMARY.md  EXECUTIVE_SUMMARY_2026_05_15.md  FEATURES.md  GAP-ANALYSIS.md  GATE_AUDIT_FINAL_2026_05_15.md  GCP_DEPLOYMENT_SETUP.md  GEMINI.md  INSIGHTS.md  INTEGRATION_TEST_IMPLEMENTATION_GUIDE.md  JIRA_WORKFLOW.md  (+180 more)
.claude/: ARCH_DETERMINATION_CHG-001.md  Add-CrossReferences.ps1  BATCH_LINKING_STRATEGY.md  CHG-001-Missing-Quote-Route.md  CODER_CLEARANCE_US-823.md  CROSS_REFERENCE_COMPLETION_SUMMARY.md  CROSS_REFERENCE_TEMPLATE.md  EXECUTION_AUTHORIZATION_ACKNOWLEDGED_US-823.md  EXECUTION_MANDATE_RECEIPT_US-823.md  FINAL_COMPLIANCE_REVIEW_US824.md  HFD_REAUDIT_US824_2026-06-14.md  IMPLEMENTATION_DIRECTIVE_US-823.md  IMPLEMENTATION_START_US-823.md  (+16 more)
freight_club_orchestration/: README.md  pyproject.toml
freight_club_orchestration/src/freight_club_orchestration/: crew.py  main.py
freight_club_orchestration/src/freight_club_orchestration/config/: agents.yaml  tasks.yaml
(+2018 files in other folders)
