[project]
name = "freight_club_orchestration"
version = "0.1.0"
description = "freight_club_orchestration using crewAI"
authors = [{ name = "Michael Barnes", email = "mdb3624@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai>=0.100.0",
    "crewai[tools]>=0.100.0",
    "crewai[google-genai]>=0.100.0",
    "crewai-tools>=0.30.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
freight_club_orchestration = "freight_club_orchestration.main:run"
run_crew = "freight_club_orchestration.main:run"
train = "freight_club_orchestration.main:train"
replay = "freight_club_orchestration.main:replay"
test = "freight_club_orchestration.main:test"
run_with_trigger = "freight_club_orchestration.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
